--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
   <title>404 Page not found</title>
 
    
-    <link href="/demo-pages/css/nucleus.css?1615315797" rel="stylesheet">
-    <link href="/demo-pages/css/fontawesome-all.min.css?1615315797" rel="stylesheet">
-    <link href="/demo-pages/css/hybrid.css?1615315797" rel="stylesheet">
-    <link href="/demo-pages/css/featherlight.min.css?1615315797" rel="stylesheet">
-    <link href="/demo-pages/css/perfect-scrollbar.min.css?1615315797" rel="stylesheet">
-    <link href="/demo-pages/css/theme.css?1615315797" rel="stylesheet">
-    <link href="/demo-pages/css/hugo-theme.css?1615315797" rel="stylesheet">
+    <link href="/demo-pages/css/nucleus.css?1615316128" rel="stylesheet">
+    <link href="/demo-pages/css/fontawesome-all.min.css?1615316128" rel="stylesheet">
+    <link href="/demo-pages/css/hybrid.css?1615316128" rel="stylesheet">
+    <link href="/demo-pages/css/featherlight.min.css?1615316128" rel="stylesheet">
+    <link href="/demo-pages/css/perfect-scrollbar.min.css?1615316128" rel="stylesheet">
+    <link href="/demo-pages/css/theme.css?1615316128" rel="stylesheet">
+    <link href="/demo-pages/css/hugo-theme.css?1615316128" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -46,7 +46,7 @@
           </p>
           <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
           <p></p>
-          <p><a href='/demo-pages/'>Go to homepage</a></p>
+          <p><a href='/demo-pages'>Go to homepage</a></p>
           <p><img src='/demo-pages/images/gopher-404.jpg' style="width:50%" alt="Page not found!"></p>
         </div>
       </div>
