--- a/404.html
+++ b/404.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="utf-8"> <meta name="description" content="">
-
+<meta name="author" content="Joan Iznardo">
  <link rel="icon" href="/demo-pages/images/favicon.png" type="image/png">
  
   <title>404 Page not found</title>
 
    
-    <link href="/demo-pages/css/nucleus.css?1615365057" rel="stylesheet">
-    <link href="/demo-pages/css/fontawesome-all.min.css?1615365057" rel="stylesheet">
-    <link href="/demo-pages/css/hybrid.css?1615365057" rel="stylesheet">
-    <link href="/demo-pages/css/featherlight.min.css?1615365057" rel="stylesheet">
-    <link href="/demo-pages/css/perfect-scrollbar.min.css?1615365057" rel="stylesheet">
-    <link href="/demo-pages/css/theme.css?1615365057" rel="stylesheet">
-    <link href="/demo-pages/css/hugo-theme.css?1615365057" rel="stylesheet">
+    <link href="/demo-pages/css/nucleus.css?1615372344" rel="stylesheet">
+    <link href="/demo-pages/css/fontawesome-all.min.css?1615372344" rel="stylesheet">
+    <link href="/demo-pages/css/hybrid.css?1615372344" rel="stylesheet">
+    <link href="/demo-pages/css/featherlight.min.css?1615372344" rel="stylesheet">
+    <link href="/demo-pages/css/perfect-scrollbar.min.css?1615372344" rel="stylesheet">
+    <link href="/demo-pages/css/theme.css?1615372344" rel="stylesheet">
+    <link href="/demo-pages/css/hugo-theme.css?1615372344" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
